Add score panel functionality

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
         </header>
 
         <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        	<ul id="stars" class="stars">
         	</ul>
 
-        	<span class="moves">3</span> Moves
-
+        	<span id="moves" class="moves"></span> Moves
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
