Add win check and announcement

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         	</ul>
 
         	<span id="moves" class="moves"></span> Moves
-            <div class="restart">
+            <div id ="deal" class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
 
         <ul id='deck' class="deck">
-
         </ul>
     </div>
 
