Add clock timer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <header>
             <h1>Matching Game</h1>
         </header>
-
         <section class="score-panel">
         	<ul id="stars" class="stars">
         	</ul>
@@ -23,6 +22,7 @@
             <div id ="deal" class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
+          <span id='clock'></span>
         </section>
 
         <ul id='deck' class="deck">
