Add breakpoints for various sizes of display

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="css/app.css">
+    <!-- Add Stylesheets for respnsive breakpoints   -->
+    <link rel="stylesheet" href="css/appSmall.css">
+    <!-- <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/appSmall.css"> -->
+    <link rel="stylesheet" media="screen and (min-width: 360px)" href="css/appSmall2.css">
+    <link rel="stylesheet" media="screen and (min-width: 440px)" href="css/appMid.css">
+    <link rel="stylesheet" media="screen and (min-width: 515px)" href="css/appMid2.css">
+    <link rel="stylesheet" media="screen and (min-width: 601px)" href="css/app.css">
+
 </head>
 <body>
 
